// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt acp --help 1`] = `
"mongolgpt acp

ACP (Agent Client Protocol) сервер эхлүүлэх

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         сонсох port                                               [number] [default: 0]
      --hostname     сонсох hostname                                 [string] [default: "127.0.0.1"]
      --mdns         mDNS service discovery идэвхжүүлэх (hostname-ийн анхдагч утгыг 0.0.0.0 болгоно)
                                                                          [boolean] [default: false]
      --mdns-domain  mDNS service-ийн custom domain нэр (анхдагч: mongolgpt.local)
                                                               [string] [default: "mongolgpt.local"]
      --cors         CORS-д зөвшөөрөх нэмэлт domain-ууд                        [array] [default: []]
      --cwd          ажлын хавтас [string] [default: "<HOME>"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp --help 1`] = `
"mongolgpt mcp

MCP (Model Context Protocol) серверүүдийг удирдах

Commands:
  mongolgpt mcp add [name]     MCP сервер нэмэх
  mongolgpt mcp list           MCP серверүүд болон төлөвийг жагсаах                    [aliases: ls]
  mongolgpt mcp auth [name]    OAuth идэвхтэй MCP серверт нэвтрэх
  mongolgpt mcp logout [name]  MCP серверийн OAuth credentials-ийг устгах
  mongolgpt mcp debug <name>   MCP серверийн OAuth холболтыг debug хийх

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt attach --help 1`] = `
"mongolgpt attach <url>

ажиллаж буй mongolgpt серверт холбогдох

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           ажиллуулах хавтас                                                     [string]
  -c, --continue      сүүлийн сешнийг үргэлжлүүлэх                                         [boolean]
  -s, --session       үргэлжлүүлэх сешний ID                                                [string]
      --fork          үргэлжлүүлэхдээ сешнийг fork хийх (--continue эсвэл --session-тэй ашиглана)
                                                                                           [boolean]
  -p, --password      үндсэн баталгаажуулалтын нууц үг (анхдагч нь MONGOLGPT_SERVER_PASSWORD)
                                                                                            [string]
  -u, --username      үндсэн баталгаажуулалтын хэрэглэгчийн нэр (анхдагч нь
                      MONGOLGPT_SERVER_USERNAME эсвэл 'mongolgpt')                          [string]
      --mini          жижиг интерактив интерфэйс эхлүүлэх                 [boolean] [default: false]
      --no-replay     resume болон resize-ийн дараа mini сешний түүхийг дахин харуулахгүй  [boolean]
      --replay-limit  mini replay-д харагдах түүхийг хамгийн шинэ N мессежээр хязгаарлах    [number]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt run --help 1`] = `
"mongolgpt run [message..]

мессежтэйгээр MongolGPT ажиллуулах

Positionals:
  message  илгээх мессеж                                                       [array] [default: []]

Options:
  -h, --help                          show help                                            [boolean]
  -v, --version                       show version number                                  [boolean]
      --print-logs                    print logs to stderr                                 [boolean]
      --log-level                     log level [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          run without external plugins                         [boolean]
      --command                       ажиллуулах команд, аргументэд message ашиглана        [string]
  -c, --continue                      сүүлийн сешнийг үргэлжлүүлэх                         [boolean]
  -s, --session                       үргэлжлүүлэх сешний ID                                [string]
      --fork                          үргэлжлүүлэхээс өмнө сешнийг fork хийх (--continue эсвэл
                                      --session шаардлагатай)                              [boolean]
      --share                         сешнийг share хийх                                   [boolean]
  -m, --model                         ашиглах загвар, provider/model форматтай              [string]
      --agent                         ашиглах agent                                         [string]
      --format                        формат: default (форматлагдсан) эсвэл json (түүхий JSON
                                      events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file                          мессежид хавсаргах файл(ууд)                           [array]
      --title                         сешний гарчиг (утга өгөөгүй бол богиносгосон prompt ашиглана)
                                                                                            [string]
      --attach                        ажиллаж буй MongolGPT серверт холбогдох (жишээ:
                                      http://localhost:4096)                                [string]
  -p, --password                      үндсэн баталгаажуулалтын нууц үг (анхдагч нь
                                      MONGOLGPT_SERVER_PASSWORD)                            [string]
  -u, --username                      үндсэн баталгаажуулалтын хэрэглэгчийн нэр (анхдагч нь
                                      MONGOLGPT_SERVER_USERNAME эсвэл 'mongolgpt')          [string]
      --dir                           ажиллуулах хавтас, attach хийж байвал алсын сервер дээрх зам
                                                                                            [string]
      --port                          локал серверийн port (утга өгөөгүй бол санамсаргүй port
                                      ашиглана)                                             [number]
      --variant                       загварын variant (provider-т хамаарах reasoning effort, жишээ:
                                      high, max, minimal)                                   [string]
      --thinking                      thinking block-уудыг харуулах                        [boolean]
      --dangerously-skip-permissions  шууд deny хийгдээгүй permission-уудыг автоматаар зөвшөөрөх
                                      (аюултай!)                          [boolean] [default: false]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt debug --help 1`] = `
"mongolgpt debug

debug болон асуудал оношлох хэрэгслүүд

Commands:
  mongolgpt debug config        шийдэгдсэн тохиргоог харуулах
  mongolgpt debug lsp           LSP debug хийх хэрэгслүүд
  mongolgpt debug rg            ripgrep debug хийх хэрэгслүүд
  mongolgpt debug file          файлын систем debug хийх хэрэгслүүд
  mongolgpt debug scrap         мэдэгдэж буй бүх төслийг жагсаах
  mongolgpt debug skill         боломжтой бүх skill-ийг жагсаах
  mongolgpt debug snapshot      snapshot debug хийх хэрэгслүүд
  mongolgpt debug startup       startup timing хэвлэх
  mongolgpt debug agent <name>  agent тохиргооны дэлгэрэнгүйг харуулах
  mongolgpt debug v2            v2 catalog болон built-in plugin-уудыг debug хийх
  mongolgpt debug info          debug мэдээлэл харуулах
  mongolgpt debug paths         глобал замуудыг харуулах (data, config, cache, state)
  mongolgpt debug wait          хязгааргүй хүлээх (debug хийхэд)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers --help 1`] = `
"mongolgpt providers

AI provider болон credentials-ийг удирдах

Commands:
  mongolgpt providers list               provider болон credentials-ийг жагсаах        [aliases: ls]
  mongolgpt providers login [url]        provider руу нэвтрэх
  mongolgpt providers logout [provider]  тохируулсан provider-оос гарах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt agent --help 1`] = `
"mongolgpt agent

agent-уудыг удирдах

Commands:
  mongolgpt agent create  шинэ agent үүсгэх
  mongolgpt agent list    боломжтой бүх agent-ийг жагсаах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt upgrade --help 1`] = `
"mongolgpt upgrade [target]

mongolgpt-ийг хамгийн сүүлийн эсвэл тодорхой хувилбар руу upgrade хийх

Positionals:
  target  upgrade хийх хувилбар, жишээ нь '0.1.48' эсвэл 'v0.1.48'                          [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      ашиглах суулгалтын арга
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt uninstall --help 1`] = `
"mongolgpt uninstall

mongolgpt-ийг uninstall хийж холбоотой файлуудыг устгах

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  тохиргооны файлуудыг үлдээх                          [boolean] [default: false]
  -d, --keep-data    сешний өгөгдөл болон snapshots-ийг үлдээх            [boolean] [default: false]
      --dry-run      устгахгүйгээр юу устахыг харуулах                    [boolean] [default: false]
  -f, --force        баталгаажуулах prompt-уудыг алгасах                  [boolean] [default: false]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt serve --help 1`] = `
"mongolgpt serve

headless MongolGPT сервер эхлүүлэх

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         сонсох port                                               [number] [default: 0]
      --hostname     сонсох hostname                                 [string] [default: "127.0.0.1"]
      --mdns         mDNS service discovery идэвхжүүлэх (hostname-ийн анхдагч утгыг 0.0.0.0 болгоно)
                                                                          [boolean] [default: false]
      --mdns-domain  mDNS service-ийн custom domain нэр (анхдагч: mongolgpt.local)
                                                               [string] [default: "mongolgpt.local"]
      --cors         CORS-д зөвшөөрөх нэмэлт domain-ууд                        [array] [default: []]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt web --help 1`] = `
"mongolgpt web

MongolGPT сервер эхлүүлж web интерфэйс нээх

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         сонсох port                                               [number] [default: 0]
      --hostname     сонсох hostname                                 [string] [default: "127.0.0.1"]
      --mdns         mDNS service discovery идэвхжүүлэх (hostname-ийн анхдагч утгыг 0.0.0.0 болгоно)
                                                                          [boolean] [default: false]
      --mdns-domain  mDNS service-ийн custom domain нэр (анхдагч: mongolgpt.local)
                                                               [string] [default: "mongolgpt.local"]
      --cors         CORS-д зөвшөөрөх нэмэлт domain-ууд                        [array] [default: []]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt models --help 1`] = `
"mongolgpt models [provider]

боломжтой бүх загварыг жагсаах

Positionals:
  provider  загвар шүүх provider ID                                                         [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     загварын дэлгэрэнгүй гаралт ашиглах (өртөг зэрэг metadata орно)        [boolean]
      --refresh     загварын cache-ийг models.dev-ээс шинэчлэх                             [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt stats --help 1`] = `
"mongolgpt stats

token хэрэглээ болон өртгийн статистик харуулах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        сүүлийн N өдрийн статистик харуулах (анхдагч: бүх хугацаа)              [number]
      --tools       харуулах tool-ийн тоо (анхдагч: бүгд)                                   [number]
      --models      загварын статистик харуулах (анхдагч: нуусан). Top N харуулах бол тоо өгнө, үгүй
                    бол бүгдийг харуулна
      --project     төслөөр шүүх (анхдагч: бүх төсөл, хоосон string: одоогийн төсөл)        [string]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt export --help 1`] = `
"mongolgpt export [sessionID]

сешний өгөгдлийг JSON хэлбэрээр export хийх

Positionals:
  sessionID  export хийх сешний ID                                                          [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    transcript болон файлын эмзэг өгөгдлийг нуух                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt import --help 1`] = `
"mongolgpt import <file>

сешний өгөгдлийг JSON файл эсвэл URL-аас import хийх

Positionals:
  file  JSON файлын зам эсвэл share URL                                          [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt github --help 1`] = `
"mongolgpt github

GitHub agent удирдах

Commands:
  mongolgpt github install  GitHub agent суулгах
  mongolgpt github run      GitHub agent ажиллуулах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt pr --help 1`] = `
"mongolgpt pr <number>

GitHub PR branch татаж checkout хийгээд mongolgpt ажиллуулах

Positionals:
  number  checkout хийх PR дугаар                                                [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt session --help 1`] = `
"mongolgpt session

сешнүүдийг удирдах

Commands:
  mongolgpt session list                сешнүүдийг жагсаах
  mongolgpt session delete <sessionID>  сешн устгах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt plugin --help 1`] = `
"mongolgpt plugin <module>

plugin суулгаж тохиргоог шинэчлэх

Positionals:
  module  npm module-ийн нэр                                                     [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      глобал тохиргоонд суулгах                             [boolean] [default: false]
  -f, --force       байгаа plugin хувилбарыг солих                        [boolean] [default: false]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt db --help 1`] = `
"mongolgpt db

database хэрэгслүүд

Commands:
  mongolgpt db [query]     интерактив sqlite3 shell нээх эсвэл query ажиллуулах            [default]
  mongolgpt db path        database-ийн замыг хэвлэх

Positionals:
  query  ажиллуулах SQL query                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      гаралтын формат               [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp list --help 1`] = `
"mongolgpt mcp list

MCP серверүүд болон төлөвийг жагсаах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp add --help 1`] = `
"mongolgpt mcp add [name]

MCP сервер нэмэх

Positionals:
  name  MCP серверийн нэр                                                                   [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         алсын MCP серверийн URL                                                 [string]
      --env         локал MCP серверийн орчны хувьсагч (KEY=VALUE)                           [array]
      --header      алсын MCP серверийн HTTP header (KEY=VALUE)                              [array]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp auth --help 1`] = `
"mongolgpt mcp auth [name]

OAuth идэвхтэй MCP серверт нэвтрэх

Commands:
  mongolgpt mcp auth list  OAuth боломжтой MCP серверүүд болон нэвтрэлтийн төлөвийг жагсаах
                                                                                       [aliases: ls]

Positionals:
  name  MCP серверийн нэр                                                                   [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp logout --help 1`] = `
"mongolgpt mcp logout [name]

MCP серверийн OAuth credentials-ийг устгах

Positionals:
  name  MCP серверийн нэр                                                                   [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers list --help 1`] = `
"mongolgpt providers list

provider болон credentials-ийг жагсаах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers login --help 1`] = `
"mongolgpt providers login [url]

provider руу нэвтрэх

Positionals:
  url  mongolgpt auth provider                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    нэвтрэх provider-ийн ID эсвэл нэр (provider сонголтыг алгасна)          [string]
  -m, --method      нэвтрэх аргын label (арга сонголтыг алгасна)                            [string]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers logout --help 1`] = `
"mongolgpt providers logout [provider]

тохируулсан provider-оос гарах

Positionals:
  provider  гарах provider-ийн ID эсвэл нэр                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt agent create --help 1`] = `
"mongolgpt agent create

шинэ agent үүсгэх

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  agent файлыг үүсгэх хавтасны зам                              [string]
      --description           agent юу хийх ёстойг тайлбарлах                               [string]
      --mode                  agent-ийн горим       [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  зөвшөөрөх permission-уудыг таслалаар тусгаарласан жагсаалт (анхдагч:
                              бүгд). Боломжтой: "bash, read, edit, glob, grep, webfetch, task,
                              todowrite, websearch, lsp, skill"                             [string]
  -m, --model                 ашиглах загвар, provider/model форматтай                      [string]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt agent list --help 1`] = `
"mongolgpt agent list

боломжтой бүх agent-ийг жагсаах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt session list --help 1`] = `
"mongolgpt session list

сешнүүдийг жагсаах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   хамгийн сүүлийн N сешнээр хязгаарлах                                    [number]
      --format      гаралтын формат           [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt session delete --help 1`] = `
"mongolgpt session delete <sessionID>

сешн устгах

Positionals:
  sessionID  устгах сешний ID                                                    [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt github install --help 1`] = `
"mongolgpt github install

GitHub agent суулгах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt github run --help 1`] = `
"mongolgpt github run

GitHub agent ажиллуулах

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       agent ажиллуулах GitHub mock event                                      [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt db path --help 1`] = `
"mongolgpt db path

database-ийн замыг хэвлэх

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
